Handle a common failure on the node reload path.
Under load, nodes that have just entered reloading and have just rebooted
might fail to get bootinfo.  The default behavior in this case is for the
node to boot from disk (dubious, but that is the topic for another day).
This causes the node to fall off the RELOAD path, winding up in either
TBFAILED or ISUP.  Worse, if the node makes it to ISUP, its reload state
is cleared and even if the reload_daemon reboots the node, it will still
not go through the reloading process.

The result is a bunch of nodes left in reloading.  Now if a node makes an
invalid transition to TBFAILED or ISUP while in the RELOAD state machine,
it fires the new REBOOT trigger which does...well, you figure it out.
Note that in the ISUP case, this trigger overrides the default that would
otherwise clear the reload state--so reboot is sufficient to get the machine
back on the RELOAD track.

--- a/event/stated/stated.in
+++ b/event/stated/stated.in
@@ -819,8 +819,8 @@ sub stateTransition($$) {
 			      objname   => $node);
 		next;
 	    };
-	    (/^$TBPOWERCYCLE$/) && do {
-		handleCommand($node,$TBPOWERCYCLE);
+	    (/^$TBREBOOT$/ || /^$TBPOWERCYCLE$/) && do {
+		handleCommand($node,$trig);
 		next;
 	    };
 	    /^RELOADOLDMFS$/ && do {
@@ -1084,6 +1084,7 @@ sub handleCommand($$;$$) {
 		    debug("Checking rebooting: $node, $nodes{$node}, ".
 			  "$nodes{$node}{state}, $nodes{$node}{noretry}\n");
 		    if (($nodes{$node}{state} ne TBDB_NODESTATE_ISUP) &&
+			($nodes{$node}{state} ne TBDB_NODESTATE_TBFAILED) &&
 			(!$nodes{$node}{noretry}) ) {
 			# This node shouldn't be rebooted now...
 			# XXX Send feedback here somehow!
@@ -1103,13 +1104,9 @@ sub handleCommand($$;$$) {
 	    # Permissions were checked in order to send the message,
 	    # so we don't need to do any fancy stuff here.
 
-	    my $cmd = "$nodereboot -r $nodelist";
-	    my $redir = " 2>&1 >> $rebootlog &";
-	    debug("$cmd $redir\n");
-	    system("date $redir");
-	    system($cmd.$redir) and
-	      notify("$params/$command: ".
-		     "Command '$cmd' failed, error $?: $!\n");
+	    system("(date; $nodereboot -r $nodelist) >>$rebootlog 2>&1 &") and
+		notify("$params/$command: ".
+		       "Command '$cmd' failed, error $?: $!\n");
 
 	    # Set up a timeout, so we retry if we don't get SHUTDOWN in time
 	    foreach $node (@nodes) {
