Gracefully handle no newline in a cert string.
If the certificate does not include the BEGIN/END headers, ensure that
it has a final newline before writing the END header. Otherwise an ssl
error will occur because the cert file is malformed.

--- a/protogeni/lib/GeniCertificate.pm.in
+++ b/protogeni/lib/GeniCertificate.pm.in
@@ -279,6 +279,7 @@ sub LoadFromString($$)
     } else {
         print $tempfile "-----BEGIN CERTIFICATE-----\n";
         print $tempfile $string;
+        print $tempfile "\n" if $string !~ /\n$/;
         print $tempfile "-----END CERTIFICATE-----\n";
     }
 
