--- a/protogeni/lib/GeniAM.pm.in
+++ b/protogeni/lib/GeniAM.pm.in
@@ -21,9 +21,12 @@ use vars qw(@ISA @EXPORT);
 use lib '@prefix@/lib';
 use GeniCMV2;
 use GeniResponse;
+use GeniCredential;
+
+use Compress::Zlib;
+use MIME::Base64;
 
 # Disable UUID checks in GeniCredential.
-use GeniCredential;
 $GeniCredential::CHECK_UUID = 0;
 
 my $API_VERSION = 1;
@@ -51,32 +54,70 @@ sub ListResources()
     # my $options = $argref->{'options'};
 
     my ($credentials, $options) = @_;
-    my $available = $options->{'geni_available'} || 0;
-    my $compress = $options->{'geni_compressed'} || 0;
+    my $available = $options->{'geni_available'};
+    my $compress = $options->{'geni_compressed'};
     my $slice_urn = $options->{'geni_slice_urn'};
+
+    if (defined($compress) && ref($compress) eq 'Frontier::RPC2::Boolean') {
+	$compress = $compress->value;
+    }
 
     # If $slice_urn is defined, this turns into a Resolve call.  We
     # need to resolve twice: once to get the sliver urn from the
     # slice, then to get the resources associated with the sliver (a
     # manifest rspec).
 
-    my $discover_args = {
-        'credentials' => $credentials,
-        'available' => $available,
-        'compress' => $compress
-    };
-    my $response = GeniCMV2::DiscoverResources($discover_args);
-    if (GeniResponse::IsError($response)) {
-        return $response;
+    if ($slice_urn) {
+
+        my $resolve_args = {
+            'urn' => $slice_urn,
+            'credentials' => $credentials
+        };
+        my $response = GeniCMV2::Resolve($resolve_args);
+        if (GeniResponse::IsError($response)) {
+            return $response;
+        }
+
+        # Get the dict out of the response
+        my $slice_dict = GeniResponse::value($response);
+
+        # FIXME Is there a sliver?
+
+        my $sliver = $slice_dict->{'sliver_urn'};
+        print "got sliver urn $sliver\n";
+        # resolve the sliver
+        $resolve_args->{'urn'} = $sliver;
+        $response = GeniCMV2::Resolve($resolve_args);
+        my $xml = GeniResponse::value($response)->{'manifest'};
+
+        if ($compress) {
+            my $coder = Frontier::RPC2->new();
+            $xml = encode_base64( compress( $xml ) );
+        }
+
+        return GeniResponse->Create( GENIRESPONSE_SUCCESS, $xml);
+
     } else {
-        # DiscoverResources returns a base64 object, but ListResources
-        # needs to return a String representation of that base64
-        # object. The logic is that ListResources should *always*
-        # return a String instead of returning different types based
-        # on the args.
-        my $base64 = GeniResponse::value($response);
-        my $response_value = $base64->value();
-        return GeniResponse->Create( GENIRESPONSE_SUCCESS, $response_value );
+
+        my $discover_args = {
+            'credentials' => $credentials,
+            'available' => $available,
+            'compress' => $compress
+        };
+        my $response = GeniCMV2::DiscoverResources($discover_args);
+        if (GeniResponse::IsError($response)) {
+            return $response;
+        } else {
+            # DiscoverResources returns a base64 object, but ListResources
+            # needs to return a String representation of that base64
+            # object. The logic is that ListResources should *always*
+            # return a String instead of returning different types based
+            # on the args.
+            my $base64 = GeniResponse::value($response);
+            my $response_value = $base64->value();
+            return GeniResponse->Create( GENIRESPONSE_SUCCESS, $response_value );
+        }
+
     }
 }
 
