--- a/protogeni/lib/GeniAM.pm.in
+++ b/protogeni/lib/GeniAM.pm.in
@@ -45,30 +45,22 @@ sub GetVersion()
     return GeniResponse->Create( GENIRESPONSE_SUCCESS, $blob );
 }
 
-# List this aggregates resources. Invokes DiscoverResources.
-# XXX Still need to handle the slice urn code path.
+# List this aggregates resources. Invokes GeniCMV2::Resolve or
+# GeniCMV2::DiscoverResources.
 sub ListResources()
 {
-    # my ($argref) = @_;
-    # my $credentials = $argref->{'credentials'};
-    # my $options = $argref->{'options'};
-
     my ($credentials, $options) = @_;
     my $available = $options->{'geni_available'};
     my $compress = $options->{'geni_compressed'};
     my $slice_urn = $options->{'geni_slice_urn'};
 
-    if (defined($compress) && ref($compress) eq 'Frontier::RPC2::Boolean') {
-	$compress = $compress->value;
-    }
-
-    # If $slice_urn is defined, this turns into a Resolve call.  We
-    # need to resolve twice: once to get the sliver urn from the
-    # slice, then to get the resources associated with the sliver (a
-    # manifest rspec).
-
+    my $xml = undef;
     if ($slice_urn) {
 
+        # If $slice_urn is defined, this turns into a Resolve call.  We
+        # need to resolve twice: once to get the sliver urn from the
+        # slice, then to get the resources associated with the sliver (a
+        # manifest rspec).
         my $resolve_args = {
             'urn' => $slice_urn,
             'credentials' => $credentials
@@ -77,48 +69,45 @@ sub ListResources()
         if (GeniResponse::IsError($response)) {
             return $response;
         }
-
-        # Get the dict out of the response
-        my $slice_dict = GeniResponse::value($response);
-
-        # FIXME Is there a sliver?
-
-        my $sliver = $slice_dict->{'sliver_urn'};
-        print "got sliver urn $sliver\n";
-        # resolve the sliver
+        # Get the hash out of the response
+        my $slice_hash = GeniResponse::value($response);
+        my $sliver = $slice_hash->{'sliver_urn'};
+        # Resolve the sliver to get the manifest RSpec
         $resolve_args->{'urn'} = $sliver;
         $response = GeniCMV2::Resolve($resolve_args);
-        my $xml = GeniResponse::value($response)->{'manifest'};
-
-        if ($compress) {
-            my $coder = Frontier::RPC2->new();
-            $xml = encode_base64( compress( $xml ) );
+        if (GeniResponse::IsError($response)) {
+            return $response;
         }
-
-        return GeniResponse->Create( GENIRESPONSE_SUCCESS, $xml);
+        $xml = GeniResponse::value($response)->{'manifest'};
 
     } else {
 
+        # No slice was specified, so get the advertisement RSpec.
         my $discover_args = {
             'credentials' => $credentials,
-            'available' => $available,
-            'compress' => $compress
+            'available' => $available
         };
         my $response = GeniCMV2::DiscoverResources($discover_args);
         if (GeniResponse::IsError($response)) {
             return $response;
         } else {
-            # DiscoverResources returns a base64 object, but ListResources
-            # needs to return a String representation of that base64
-            # object. The logic is that ListResources should *always*
-            # return a String instead of returning different types based
-            # on the args.
-            my $base64 = GeniResponse::value($response);
-            my $response_value = $base64->value();
-            return GeniResponse->Create( GENIRESPONSE_SUCCESS, $response_value );
+            $xml = GeniResponse::value($response)
         }
 
     }
+
+    # Was compression requested?
+    if (defined($compress) && ref($compress) eq 'Frontier::RPC2::Boolean') {
+	$compress = $compress->value;
+    }
+    # If compression was requested, do it. The result is a String
+    # whose contents are a base64 encoding of a zlib compressed RSpec.
+    if ($compress) {
+        my $coder = Frontier::RPC2->new();
+        $xml = encode_base64( compress( $xml ) );
+    }
+    # Finally, return the RSpec
+    return GeniResponse->Create(GENIRESPONSE_SUCCESS, $xml);
 }
 
 sub auto_add_sa($)
