Comment out the __DATA__ (SelfLoader thingee) for now.
We get taint check failures with perl 5.10.1 when __DATA__ is in there.

--- a/db/EmulabConstants.pm.in
+++ b/db/EmulabConstants.pm.in
@@ -174,7 +174,7 @@ $PROJROOT    = "@PROJROOT_DIR@";
 
 # _Always_ make sure that this 1 is at the end of the file...
 1;
-__DATA__
+#__DATA__
 
 #
 # Needs to be configured.
