Remove taint mode from some daemons.
That change I made to EmulabConstants.pm.in only worked around one instance
of the problem.  Apparently in perl 5.10 there is a known bug related to
taint mode and self loading?  Anyway, the short-term fix is either to move
to perl 5.12 (no thanks) or disable taint checking failures when we hit the
problem.

--- a/db/Experiment.pm.in
+++ b/db/Experiment.pm.in
@@ -186,11 +186,11 @@ sub mysystem($)
 {
     my ($command) = @_;
 
-    my $cwd;
-    chomp($cwd = `/bin/pwd`);
-
-    print STDERR "Running '$command' in $cwd\n"
-	if (0);
+    if (0) {
+	my $cwd;
+	chomp($cwd = `/bin/pwd`);
+	print STDERR "Running '$command' in $cwd\n";
+    }
     return system($command);
 }
 
@@ -1437,7 +1437,7 @@ sub GetProject($)
     my $project = Project->Lookup($self->pid_idx());
     
     if (! defined($project)) {
-	print("*** WARNING: Could not lookup project object for $self!", 1);
+	print("*** WARNING: Could not lookup project object for $self!\n");
 	return undef;
     }
     return $project;
