Print out the pid/eid when complaining about "missing critical directories".

--- a/tbsetup/endexp.in
+++ b/tbsetup/endexp.in
@@ -165,7 +165,7 @@ my $infodir = $experiment->InfoDir();
 # Sanity check.
 if (! (-e $workdir && -e $userdir)) {
     die("*** $0:\n".
-	"    Missing a critical directory!\n");
+	"    $pid/$eid is missing a critical directory!\n");
 }
 if (! -e $infodir) {
     if (! -e "$TB/expinfo/$pid") {
