--- a/tbsetup/modgroups.in
+++ b/tbsetup/modgroups.in
@@ -1,7 +1,7 @@
 #!/usr/bin/perl -wT
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2005, 2006, 2007 University of Utah and the Flux Group.
+# Copyright (c) 2005-2010 University of Utah and the Flux Group.
 # All rights reserved.
 #
 use English;
@@ -69,6 +69,8 @@ use libaudit;
 use libdb;
 use libtestbed;
 use User;
+use Group;
+use Project;
 
 # Protos
 sub fatal($);
