Add missing module includes.

--- a/tbsetup/rmgroup.in
+++ b/tbsetup/rmgroup.in
@@ -1,7 +1,7 @@
 #!/usr/bin/perl -wT
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2007 University of Utah and the Flux Group.
+# Copyright (c) 2000-2010 University of Utah and the Flux Group.
 # All rights reserved.
 #
 use English;
@@ -75,6 +75,8 @@ use lib "@prefix@/lib";
 use libaudit;
 use libdb;
 use libtestbed;
+use User;
+use Group;
 
 # Defined in libtestbed;
 my $PROJROOT    = PROJROOT();
